examples/runner/v3.4.0/README.md
### sm90 (H100, H200, H20, etc.)
```shell
python examples/runner/python/triton/matmul-with-tma-v4.py

python examples/runner/v3.5.x/ttir/matmul-with-tma/matmul-with-tma-v4.py

python examples/runner/v3.4.0/ttgir/sm90/matmul-with-tma-v4.py

python examples/runner/v3.4.0/llir/sm90/matmul-with-tma-v4.py

python examples/runner/v3.4.0/ptx/sm90/matmul-with-tma-v4.py

python examples/runner/v3.4.0/cubin/sm90/matmul-with-tma-v4.py

python examples/runner/python/gluon/01-intro.py
python examples/runner/python/gluon/02-layouts.py
```

### sm80 (A100, A30)
```shell
python examples/runner/python/triton/matmul-with-dot-v2.py

python examples/runner/v3.5.x/ttir/matmul-with-dot/matmul-with-dot-v2.py

python examples/runner/v3.4.0/ttgir/sm80/matmul-with-dot-v2.py

python examples/runner/v3.4.0/llir/sm80/matmul-with-dot-v2.py

python examples/runner/v3.4.0/ptx/sm80/matmul-with-dot-v2.py

python examples/runner/v3.4.0/cubin/sm80/matmul-with-dot-v2.py

python examples/runner/python/gluon/01-intro.py
python examples/runner/python/gluon/02-layouts.py
```

### sm120 (RTX PRO 6000, RTX 5090, etc.)
```shell
python examples/runner/python/triton/matmul-with-tma-v4.py

python examples/runner/v3.5.x/ttir/matmul-with-tma/matmul-with-tma-v4.py

python examples/runner/v3.4.0/ttgir/sm120/matmul-with-tma-v4.py

python examples/runner/v3.4.0/llir/sm120/matmul-with-tma-v4.py

python examples/runner/v3.4.0/ptx/sm120/matmul-with-tma-v4.py

python examples/runner/v3.4.0/cubin/sm120/matmul-with-tma-v4.py

python examples/runner/python/gluon/01-intro.py
python examples/runner/python/gluon/02-layouts.py
```

### sm86 (A10, RTX 3090, etc.)
```shell
python examples/runner/python/triton/matmul-with-dot-v2.py

python examples/runner/v3.5.x/ttir/matmul-with-dot/matmul-with-dot-v2.py

python examples/runner/v3.4.0/ttgir/sm86/matmul-with-dot-v2.py

python examples/runner/v3.4.0/llir/sm86/matmul-with-dot-v2.py

python examples/runner/v3.4.0/ptx/sm86/matmul-with-dot-v2.py

python examples/runner/v3.4.0/cubin/sm86/matmul-with-dot-v2.py

python examples/runner/python/gluon/01-intro.py
python examples/runner/python/gluon/02-layouts.py
```

### sm75 (T4, RTX 2080, etc.)
```shell
python examples/runner/python/triton/matmul.py

python examples/runner/v3.5.x/ttir/matmul/matmul.py

python examples/runner/v3.5.x/ttgir/sm75/matmul.py

python examples/runner/v3.4.0/llir/sm75/matmul.py

python examples/runner/v3.4.0/ptx/sm75/matmul.py

python examples/runner/v3.4.0/cubin/sm75/matmul.py

python examples/runner/python/gluon/01-intro.py
python examples/runner/python/gluon/02-layouts.py
```
